Use only css to prevent overflow

--- a/resources/assets/sass/volumes/main.scss
+++ b/resources/assets/sass/volumes/main.scss
@@ -28,8 +28,8 @@ $volume-image-padding: 0.5em;
 
 .prevent-overflow {
     object-fit: contain;
-    width:100%;
-    height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .volume-storage-disk-btn {
